fix : 장바구니 수정 시 새로 객체 빌드하도록 수정 #68